<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/update_profile_menu"
        android:orderInCategory="1"
        android:title="@string/update_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/chat_rules_menu"
        android:orderInCategory="2"
        android:title="@string/chat_rules_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/invite_friends_menu"
        android:orderInCategory="4"
        android:title="@string/invite_friends"
        app:showAsAction="never" />

    <item
        android:id="@+id/share_menu"
        android:orderInCategory="5"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/sign_out_menu"
        android:orderInCategory="6"
        android:title="@string/sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_account_menu"
        android:orderInCategory="7"
        android:title="@string/delete_account"
        app:showAsAction="never" />

</menu>